--- a/ghost.html
+++ b/ghost.html
@@ -48,23 +48,18 @@
         </style>
         <script>
             const ghostStepFactor = 0.90;
-            const errorMargin = 0.05;
+            const errorMargin = 5;
             const speeds = [
-                { speed: 1.7, type: "Normal" },
-                { speed: 1, type: "Ravenant WO LOS" },
-                { speed: 3, type: "Ravenant LOS" },
-                { speed: 1, type: "Thaye Old" },
-                { speed: 2.75, type: "Thaye Young" },
-                { speed: 0.4, type: "Deogen Close" },
-                { speed: 3, type: "Deogen Far" },
-                { speed: 1.5, type: "Slow Twin" },
-                { speed: 1.9, type: "Fast Twin" },
-                { speed: 2.25, type: "Moroi 0% Sanity WO LOS" },
-                { speed: 1.5, type: "Moroi +45% Sanity" },
-                { speed: 2.5, type: "Jinn 3m from Player Breaker ON" },
-                { speed: 2.5, type: "Raiju Near Eletronic Device" },
-                { speed: 1.4, type: "Hantu >= 15 C " },
-                { speed: 2.7, type: "Hantu =< 0 C" },
+                { speed: 115, type: "Normal" },
+                { speed: 115, type: "Normal" },
+                { speed: 135, type: "Twin decoy" },
+                { speed: 100, type: "Twin original" },
+                { speed: 77, type: "Revenant while roaming" },
+                { speed: 209, type: "Rev while chasing" },
+                { speed: 192, type: "Thaye (early)" },
+                { speed: 157, type: "Moroi (at 0 sanity)" },
+                { speed: 174, type: "Raiju near electronics" },
+                { speed: 174, type: "Jinn with LoS with breaker on" },
             ];
 
             function getDescription(value, baseSpeed) {
@@ -94,11 +89,11 @@
                         counter += 1;
 
                         let currentClick = Date.now();
-                        let metersPerSecond = 0;
+                        let bpm = 0;
 
                         if (lastClick != null) {
-                            metersPerSecond = (1 / ((currentClick - lastClick) / 1000)) * ghostStepFactor;
-                            const mpsFormatted = metersPerSecond.toFixed(2);
+                            bpm = 60 / ((currentClick - lastClick) / 1000);
+                            const mpsFormatted = bpm.toFixed(2);
                             console.log(`Counter [${counter}]: ${mpsFormatted}`);
                             
 
@@ -113,7 +108,7 @@
                         }
 
                         lastClick = currentClick;
-                        meanTimeArr.push(metersPerSecond);
+                        meanTimeArr.push(bpm);
                     })
 
                 samplesQtdElm.addEventListener("change", (evt) => {
